-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
Ubuntu 24.04 client
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/588633a4-4b73-4f21-81c0-559276c42453
test_23b failed with the following error:
CMD: onyx-33vm1.onyx.whamcloud.com rm -rf /mnt/lustre/d23b.sanity-sec CMD: onyx-33vm1.onyx.whamcloud.com mkdir -p /mnt/lustre/d23b.sanity-sec CMD: onyx-33vm1.onyx.whamcloud.com setfacl -R -d -m group:sanityusr:rwx /mnt/lustre/d23b.sanity-sec CMD: onyx-33vm1.onyx.whamcloud.com getfacl /mnt/lustre/d23b.sanity-sec getfacl: Removing leading '/' from absolute path names CMD: onyx-33vm2 getfacl /mnt/lustre/d23b.sanity-sec onyx-33vm2: getfacl: Removing leading '/' from absolute path names CMD: onyx-33vm2 getent passwd /usr/lib64/lustre/tests/sanity-sec.sh: line 2001: [: too many arguments sanity-sec test_23b: @@@@@@ FAIL: Should return gid=60010 or 60010 on client2
Test session details:
clients: https://build.whamcloud.com/job/lustre-master/4558 - 6.8.0-35-generic
servers: https://build.whamcloud.com/job/lustre-master/4558 - 5.14.0-427.24.1_lustre.el9.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-sec test_23b - Should return gid=60010 or 60010 on client2
- is duplicated by
-
LU-18070 sanity test_103a: FAIL: run_acl_subtest 'misc' failed
-
- Resolved
-
-
LU-18096 sanity-sec test_47: FAIL: link should not point to anywhere useful
-
- Resolved
-
- mentioned in
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...